--- a/SIMS.WebApp/Views/Students/Details.cshtml
+++ b/SIMS.WebApp/Views/Students/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SIMS.Domain.Student
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Details"; // Tiêu đề trang
 }
 
 <h1>Details</h1>
@@ -9,39 +9,26 @@
 <div>
     <h4>Student</h4>
     <hr />
+    <!-- Hiển thị chi tiết thông tin sinh viên -->
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.StudentCode)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.StudentCode)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FirstName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FirstName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LastName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LastName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateOfBirth)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DateOfBirth)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Email)
-        </dd>
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.StudentCode)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.StudentCode)</dd>
+
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.FirstName)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.FirstName)</dd>
+
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.LastName)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.LastName)</dd>
+
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.DateOfBirth)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.DateOfBirth)</dd>
+
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Email)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.Email)</dd>
     </dl>
 </div>
+
+<!-- Link đến chỉnh sửa hoặc quay lại danh sách -->
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
